<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/gb_enable_gamebar_overlay"
        android:summary="@string/game_bar_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/gb_overlay_features"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/gb_fps_overlay"
            android:summary="@string/gb_show_current_fps_on_screen"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/gb_device_temperature"
            android:summary="@string/gb_show_device_battery_temperature"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/gb_cpu_usage"
            android:summary="@string/gb_show_current_cpu_usage_percentage"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/gb_cpu_clock_speeds"
            android:summary="@string/gb_show_current_cpu_clock_speeds_for_each_core"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/gb_cpu_temperature"
            android:summary="@string/gb_show_cpu_temperature"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/gb_ram_usage"
            android:summary="@string/gb_show_current_ram_usage_in_mb"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_fps_measurement_method"
        android:dependency="game_bar_fps_enable">
        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/gb_select_fps_method"
            android:summary="@string/gb_choose_between_the_new_api_method_default_and_le"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_customization"
        android:dependency="game_bar_enable">

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_text_size"
            android:title="@string/gb_text_size"
            android:summary="@string/gb_adjust_the_size_of_overlay_text"
            android:defaultValue="16"
            android:max="32"
            android:min="12" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_background_alpha"
            android:title="@string/gb_background_transparency"
            android:summary="@string/gb_adjust_the_transparency_of_the_background"
            android:defaultValue="128"
            android:max="255"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_corner_radius"
            android:title="@string/gb_overlay_corner_radius"
            android:summary="@string/gb_adjust_how_rounded_the_overlay_corners_should_be"
            android:defaultValue="16"
            android:max="100"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_padding"
            android:title="@string/gb_overlay_padding"
            android:summary="@string/gb_adjust_the_space_around_the_stats"
            android:defaultValue="12"
            android:max="64"
            android:min="0" />

        <com.android.settingslib.widget.SliderPreference
            android:key="game_bar_item_spacing"
            android:title="@string/gb_item_spacing"
            android:summary="@string/gb_adjust_spacing_between_overlay_lines"
            android:defaultValue="8"
            android:max="50"
            android:min="0" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/gb_update_interval"
            android:summary="@string/gb_set_how_often_the_overlay_values_update"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <ListPreference
            android:key="game_bar_title_color"
            android:title="@string/gb_stat_title_color"
            android:summary="@string/gb_color_for_fps_temp_cpu_etc_text"
            android:defaultValue="#FFFFFF"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_value_color"
            android:title="@string/gb_stat_value_color"
            android:summary="@string/gb_color_for_numeric_stats_e_g_29_32_0_c"
            android:defaultValue="#4CAF50"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/gb_overlay_position"
            android:summary="@string/gb_select_the_position_of_the_overlay_on_screen"
            android:defaultValue="top_left"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/gb_overlay_format"
            android:summary="@string/gb_choose_between_full_or_minimal_display"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_split_config"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/gb_split_mode"
            android:summary="@string/gb_choose_side_by_side_or_stacked_arrangement"
            android:defaultValue="stacked"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_overlay_gesture_controls"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_toggle"
            android:title="@string/gb_enable_single_tap_to_toggle"
            android:summary="@string/gb_tap_once_to_switch_between_full_and_minimal_over"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_capture"
            android:title="@string/gb_enable_double_tap_to_capture"
            android:summary="@string/gb_double_tap_overlay_to_start_stop_capture_logs"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/gb_enable_long_press"
            android:summary="@string/gb_long_press_overlay_to_access_gamebar_settings"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/gb_long_press_duration"
            android:summary="@string/gb_set_the_duration_required_to_long_press_the_over"
            android:defaultValue="1000"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values"
            android:dependency="game_bar_longpress_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_capture_logs"
        android:dependency="game_bar_enable">

        <Preference
            android:key="game_bar_capture_start"
            android:title="@string/gb_start_logging"
            android:summary="@string/gb_begin_capturing_fps_and_performance_data_in_real" />

        <Preference
            android:key="game_bar_capture_stop"
            android:title="@string/gb_stop_logging"
            android:summary="@string/gb_stop_capturing_fps_and_performance_data_in_real_" />

        <Preference
            android:key="game_bar_capture_export"
            android:title="@string/gb_export_gamebar_log_data"
            android:summary="@string/gb_save_the_captured_fps_and_performance_data_as_a_" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/gb_auto_enable_gamebar">
        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/gb_auto_enable_gamebar_for_selected_apps"
            android:summary="@string/gb_if_turned_on_selected_apps_will_auto_enable_game"
            android:defaultValue="false" />

        <Preference
            android:key="game_bar_app_selector"
            android:title="@string/gb_select_apps"
            android:summary="@string/gb_add_apps_that_should_auto_enable_gamebar" />
    </PreferenceCategory>

</PreferenceScreen>
